--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
+    "react-simple-typewriter": "^3.0.1",
     "react-table": "^7.7.0",
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
